fix: headlamp svc

--- a/core/headlamp.yaml
+++ b/core/headlamp.yaml
@@ -53,7 +53,7 @@ spec:
                     backendRefs:
                       - name: headlamp
                         kind: Service
-                        namespace: default
+                        namespace: kube-system
                         port: 80
             - |
               apiVersion: external-secrets.io/v1beta1
