--- a/apps/glance/deployment.yaml
+++ b/apps/glance/deployment.yaml
@@ -26,7 +26,7 @@ spec:
           imagePullPolicy: IfNotPresent
           envFrom:
             - secretRef:
-                name: glance
+                name: glance-1pw
           command:
             - "/app/glance"
             - "-config"
