feat: add 1Password secret integration and update environment configuration

--- a/apps/mealie/deployment.yaml
+++ b/apps/mealie/deployment.yaml
@@ -27,6 +27,8 @@ spec:
           envFrom:
             - configMapRef:
                 name: mealie-config
+            - secretRef:
+                name: mealie-1pw
           ports:
             - containerPort: 9000
               name: http
