--- a/core/cert-manager/kustomization.yaml
+++ b/core/cert-manager/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - certificate.yaml
-  - external-secret.yaml
+  - 1password.secret.yaml
+  - certificate.yaml
 
 
