feat: add 1Password secret for tablerock and update deployment reference

--- a/apps/table-rock-lake-level/deployment.yaml
+++ b/apps/table-rock-lake-level/deployment.yaml
@@ -23,7 +23,7 @@ spec:
       containers:
         - envFrom:
             - secretRef:
-                name: mongo-secret
+                name: tablerock-1pw
           image: table-rock-lake-level
           imagePullPolicy: IfNotPresent
 
