--- a/apps/table-rock-lake-level/kustomization.yaml
+++ b/apps/table-rock-lake-level/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
 - deployment.yaml
 - service.yaml
-- external-secret.yaml
+- 1password.secret.yaml
 
 images:
 - name: table-rock-lake-level
