feat: add 1Password secret for cloudflared and update deployment configuration

--- a/core/cloudflared-tunnel/kustomization.yaml
+++ b/core/cloudflared-tunnel/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
 #  - configmap.yaml
   - deployment.yaml
-  - external-secret.yaml
+  - 1password.secret.yaml
   - podmonitor.yaml
 
 images:
