--- a/core/cloudflared-tunnel/deployment.yaml
+++ b/core/cloudflared-tunnel/deployment.yaml
@@ -74,7 +74,7 @@ spec:
             # kubectl create secret generic tunnel-credentials \
             # --from-file=credentials.json=/Users/yourusername/.cloudflared/<tunnel ID>.json
             # ```
-            secretName: clouddflared-1pw
+            secretName: cloudflared-1pw
         # Create a config.yaml file from the ConfigMap below.
         - name: config
           configMap:
