feat: add 1Password secret for smb credentials and update storage references

--- a/apps/media/base/storage.yaml
+++ b/apps/media/base/storage.yaml
@@ -22,7 +22,7 @@ spec:
     volumeAttributes:
       source: '//192.168.1.253/Media'
     nodeStageSecretRef:
-      name: smb-creds
+      name: smb-creds-1pw
       namespace: csi-smb-provisioner
 ---
 apiVersion: v1
@@ -65,7 +65,7 @@ spec:
     volumeAttributes:
       source: '//192.168.1.253/AppConfig/youtubedl'
     nodeStageSecretRef:
-      name: smb-creds
+      name: smb-creds-1pw
       namespace: csi-smb-provisioner
 ---
 apiVersion: v1
