--- a/apps/media/overseerr/chart/templates/storage.yaml
+++ b/apps/media/overseerr/chart/templates/storage.yaml
@@ -22,7 +22,7 @@ spec:
     volumeAttributes:
       source: '//192.168.1.253/AppConfig/overseerr'
     nodeStageSecretRef:
-      name: smb-creds
+      name: smb-creds-1pw
       namespace: csi-smb-provisioner
 ---
 apiVersion: v1
