--- a/core/traefik-assets/storage.yaml
+++ b/core/traefik-assets/storage.yaml
@@ -22,7 +22,7 @@ spec:
     volumeAttributes:
       source: '//192.168.1.253/AppConfig/traefik'
     nodeStageSecretRef:
-      name: smb-creds
+      name: smb-creds-1pw
       namespace: csi-smb-provisioner
 ---
 apiVersion: v1
