--- a/core/csi-driver-smb/1password.secret.yaml
+++ b/core/csi-driver-smb/1password.secret.yaml
@@ -2,5 +2,6 @@ apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
   name: smb-creds-1pw
+  namespace: csi-smb-provisioner
 spec:
   itemPath: "vaults/Kubernetes/items/csi-smb-provisioner"
