--- a/core/cloudflared-tunnel/config.yaml
+++ b/core/cloudflared-tunnel/config.yaml
@@ -86,6 +86,9 @@ ingress:
   - hostname: auth.pmcd.dev
     service: http://pocketid.pocketid:80
 
+  - hostname: tv.pmcd.dev
+    service: http://192.168.1.210:8409
+
   # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
   # issues. If hello.example.com resolves and tunnel.example.com does not, then the problem is
   # in the connection from cloudflared to your local service, not from the internet to cloudflared.
