--- a/core/argocd.yaml
+++ b/core/argocd.yaml
@@ -47,56 +47,56 @@ spec:
           server:
             resources:
               requests:
-                cpu: 100m
-                memory: 256Mi
+                cpu: 25m
+                memory: 128Mi
               limits:
-                cpu: 500m
-                memory: 512Mi
+                cpu: 200m
+                memory: 256Mi
 
           controller:
             resources:
               requests:
-                cpu: 250m
+                cpu: 500m
+                memory: 1280Mi
+              limits:
+                cpu: 1000m
+                memory: 2Gi
+
+          repoServer:
+            resources:
+              requests:
+                cpu: 600m
                 memory: 512Mi
               limits:
                 cpu: 1000m
                 memory: 1Gi
 
-          repoServer:
-            resources:
-              requests:
-                cpu: 100m
-                memory: 256Mi
-              limits:
-                cpu: 500m
-                memory: 512Mi
-
           redis:
             resources:
               requests:
-                cpu: 50m
-                memory: 64Mi
+                cpu: 15m
+                memory: 100Mi
               limits:
-                cpu: 200m
-                memory: 128Mi
+                cpu: 100m
+                memory: 200Mi
 
           applicationSet:
             resources:
               requests:
-                cpu: 50m
-                memory: 64Mi
+                cpu: 15m
+                memory: 100Mi
               limits:
-                cpu: 200m
+                cpu: 100m
                 memory: 256Mi
 
           notifications:
             resources:
               requests:
-                cpu: 50m
-                memory: 64Mi
+                cpu: 15m
+                memory: 100Mi
               limits:
                 cpu: 100m
-                memory: 128Mi
+                memory: 200Mi
 
           dex:
             enabled: false
