fix: update secret reference in lake-info cronjob configuration

--- a/cronjobs/lake-info.cronjob.yaml
+++ b/cronjobs/lake-info.cronjob.yaml
@@ -24,7 +24,7 @@ spec:
                       key: MONGODB_URI
               envFrom:
                 - secretRef:
-                    name: lake-info-secret
+                    name: tablerock-1pw
 
 
           restartPolicy: OnFailure
