--- a/apps/media/youtubedl/kustomization.yaml
+++ b/apps/media/youtubedl/kustomization.yaml
@@ -1,4 +1,18 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: media
 resources:
   - httproute.yaml
+  - storage.yaml
+  - deployment.yaml
+  - service.yaml
+
+images:
+  - name: youtubedl
+    newName: tzahi12345/youtubedl-material
+    newTag: 4.3.2
+
+configMapGenerator:
+  - name: youtubedl-config
+    envs:
+      - .env
