feat: add youtubedl to media applications set

--- a/apps/media/media-apps.applicationset.yaml
+++ b/apps/media/media-apps.applicationset.yaml
@@ -17,6 +17,7 @@ spec:
           - name: notifiarr
           - name: sabnzbd
           - name: kometa
+          - name: youtubedl
   template:
     metadata:
       name: '{{name}}'
