feat: add postprocessor for organizing YouTube downloads

--- a/apps/media/youtubedl/kustomization.yaml
+++ b/apps/media/youtubedl/kustomization.yaml
@@ -16,3 +16,6 @@ configMapGenerator:
   - name: youtubedl-config
     envs:
       - .env
+  - name: ytdl-postprocessor-script
+    files:
+      - watcher.py
