--- a/apps/media/youtubedl/deployment.yaml
+++ b/apps/media/youtubedl/deployment.yaml
@@ -65,6 +65,31 @@ spec:
             requests:
               cpu: 0.1
               memory: 128Mi
+        - name: postprocessor
+          image: python:3.12-slim
+          env:
+            - name: STABLE_SECONDS
+              value: "15"
+            - name: UNKNOWN_ARTIST
+              value: "Unknown Artist"
+            - name: COPY_MODE
+              value: "0"
+          command: [ "sh","-lc" ]
+          args:
+            - >
+              pip install --no-cache-dir watchdog &&
+              python /app/watcher.py
+          volumeMounts:
+            - name: media
+              mountPath: /incoming
+              subPath: video/youtube/Incoming
+            - name: media
+              mountPath: /organized
+              subPath: video/youtube/Organized
+            - name: script
+              mountPath: /app/watcher.py
+              subPath: watcher.py
+              readOnly: true
       volumes:
         - name: config
           persistentVolumeClaim:
@@ -72,3 +97,6 @@ spec:
         - name: media
           persistentVolumeClaim:
             claimName: smb-media-claim
+        - name: script
+          configMap:
+            name: ytdl-postprocessor-script
