--- a/core/headlamp.yaml
+++ b/core/headlamp.yaml
@@ -63,4 +63,18 @@ spec:
                 namespace: kube-system
               spec:
                 itemPath: "vaults/Kubernetes/items/headlamp"
+            - |
+              apiVersion: rbac.authorization.k8s.io/v1
+              kind: ClusterRoleBinding
+              metadata:
+                name: headlamp-view
+              subjects:
+                - kind: ServiceAccount
+                  name: headlamp
+                  namespace: kube-system
+              roleRef:
+                  kind: ClusterRole
+                  name: cluster-admin
+                  apiGroup: rbac.authorization.k8s.io
+
 
