feat: add callbackURL for OIDC in headlamp configuration

--- a/core/headlamp.yaml
+++ b/core/headlamp.yaml
@@ -24,8 +24,8 @@ spec:
         releaseName: headlamp
         valuesObject:
           config:
-            baseURL: ""
             oidc:
+              callbackURL: "https://headlamp.x.pmcd.io/oidc-callback"
               secret:
                 create: false
               externalSecret:
