feat: enable PKCE for OIDC in headlamp configuration

--- a/core/headlamp.yaml
+++ b/core/headlamp.yaml
@@ -26,6 +26,7 @@ spec:
           config:
             oidc:
               callbackURL: "https://headlamp.x.pmcd.io/oidc-callback"
+              usePKCE: true
               secret:
                 create: false
               externalSecret:
