feat: update readarr image and add to applicationset

--- a/apps/media/media-apps.applicationset.yaml
+++ b/apps/media/media-apps.applicationset.yaml
@@ -18,6 +18,7 @@ spec:
           - name: sabnzbd
           - name: kometa
           - name: youtubedl
+          - name: readarr
   template:
     metadata:
       name: '{{name}}'
