--- a/apps/media/readarr/kustomization.yaml
+++ b/apps/media/readarr/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
 
 images:
   - name: readarr
-    newName: linuxserver/readarr
-    newTag: 0.4.18-develop
+    newName: ghcr.io/pennydreadful/bookshelf
+    newTag: hardcover-v0.4.20.107
