--- a/apps/ia-ignition/kustomization.yaml
+++ b/apps/ia-ignition/kustomization.yaml
@@ -16,3 +16,16 @@ configMapGenerator:
   - name: ia-ignition-config
     envs:
       - .env
+  - name: ignition-config-scripts
+    files:
+      - scripts/seed-data-volume.sh
+      - scripts/seed-redundancy.sh
+      - scripts/prepare-gan-certificates.sh
+      - scripts/prepare-tls-certificates.sh
+      - scripts/invoke-args.sh
+      - scripts/redundant-health-check.sh
+  - name: ignition-config-files
+    files:
+      - config/redundancy-primary.xml
+      - config/redundancy-backup.xml
+      - config/logback.xml
