fix: change access mode from ReadWriteOnce to ReadWriteMany in storage.yaml

--- a/apps/ia-ignition/storage.yaml
+++ b/apps/ia-ignition/storage.yaml
@@ -4,7 +4,7 @@ metadata:
   name: longhorn-ia-ignition-config
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   storageClassName: longhorn
   resources:
     requests:
