feat: add deployment, service, and HTTP route for dispatcharr application

--- a/apps/media/media-apps.applicationset.yaml
+++ b/apps/media/media-apps.applicationset.yaml
@@ -19,6 +19,7 @@ spec:
           - name: kometa
           - name: youtubedl
           - name: readarr
+          - name: dispatcharr
   template:
     metadata:
       name: '{{name}}'
