feat: add 1Password secret for dispatcharr and update deployment configuration

--- a/apps/media/media-apps.applicationset.yaml
+++ b/apps/media/media-apps.applicationset.yaml
@@ -20,6 +20,7 @@ spec:
           - name: youtubedl
           - name: readarr
           - name: dispatcharr
+          - name: hdhr2xmltv
   template:
     metadata:
       name: '{{name}}'
