--- a/apps/media/dispatcharr/kustomization.yaml
+++ b/apps/media/dispatcharr/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - httproute.yaml
   - 1password.secret.yaml
   - storage.yaml
+  - celery.statefulset.yaml
 
 images:
   - name: dispatcharr
