feat: add DISPATCHARR_ENV variable to deployment and comment out celery StatefulSet in kustomization

--- a/apps/media/dispatcharr/deployment.yaml
+++ b/apps/media/dispatcharr/deployment.yaml
@@ -23,6 +23,8 @@ spec:
           env:
             - name: TZ
               value: America/Chicago
+            - name: DISPATCHARR_ENV
+              value: aio
           envFrom:
             - secretRef:
                 name: dispatcharr-1pw
