--- a/apps/media/dispatcharr/kustomization.yaml
+++ b/apps/media/dispatcharr/kustomization.yaml
@@ -12,4 +12,4 @@ resources:
 images:
   - name: dispatcharr
     newName: ghcr.io/dispatcharr/dispatcharr
-    newTag: 0.17.0-20260126233822
+    newTag: 0.18.1
