fix: update cronjob configuration and deployment settings

--- a/core/traefik.yaml
+++ b/core/traefik.yaml
@@ -32,6 +32,7 @@ spec:
               expose:
                 default: true
               port: 9101
+              exposedPort: 9101
               protocol: TCP
             web:
               port: 80
