--- a/apps/media/kometa/cronjob.yaml
+++ b/apps/media/kometa/cronjob.yaml
@@ -5,7 +5,10 @@ metadata:
   namespace: media
 spec:
   schedule: "0 0 * * *"
+  concurrencyPolicy: Forbid
+  startingDeadlineSeconds: 3600
   successfulJobsHistoryLimit: 3
+  failedJobsHistoryLimit: 1
   jobTemplate:
     spec:
       template:
