feat(kustomization): update Flannel resource and enhance README with CNI troubleshooting steps

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 dockerconfigjson.yaml
 secrets.env.json
 1password-credentials.json
+.terraform/
+**/.terraform/
+*.tfstate
+*.tfstate.*
+terraform.tfvars
