--- a/core/flannel-assets/kustomization.yaml
+++ b/core/flannel-assets/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  # renovate: datasource=github-releases depName=flannel-io/flannel
   - https://raw.githubusercontent.com/flannel-io/flannel/v0.26.5/Documentation/kube-flannel.yml
 patches:
   - target:
