--- a/core/prometheus.yaml
+++ b/core/prometheus.yaml
@@ -43,10 +43,10 @@ spec:
               resources:
                 requests:
                   cpu: 200m
-                  memory: 512Mi
+                  memory: 1Gi
                 limits:
                   cpu: 500m
-                  memory: 768Mi
+                  memory: 2Gi
               podMonitorSelector: { }
               podMonitorSelectorNilUsesHelmValues: false
               podMonitorNamespaceSelector:
