--- a/core/traefik.yaml
+++ b/core/traefik.yaml
@@ -27,6 +27,17 @@ spec:
       helm:
         releaseName: traefik
         valuesObject:
+          deployment:
+            replicas: 2
+          affinity:
+            podAntiAffinity:
+              preferredDuringSchedulingIgnoredDuringExecution:
+                - weight: 100
+                  podAffinityTerm:
+                    labelSelector:
+                      matchLabels:
+                        app.kubernetes.io/name: traefik
+                    topologyKey: kubernetes.io/hostname
           ports:
             metrics:
               expose:
