--- a/apps/media/dispatcharr/storage.yaml
+++ b/apps/media/dispatcharr/storage.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: longhorn-dispatcharr-config
+  name: nfs-dispatcharr-config
   namespace: media
 spec:
   accessModes:
-    - ReadWriteOnce
-  storageClassName: longhorn
+    - ReadWriteMany
+  storageClassName: nfs-csi
   resources:
     requests:
       storage: 500Mi
