feat(storage): switch from NFS to SMB for persistent volume and claim

--- a/apps/media/dispatcharr/deployment.yaml
+++ b/apps/media/dispatcharr/deployment.yaml
@@ -80,4 +80,4 @@ spec:
       volumes:
         - name: data
           persistentVolumeClaim:
-            claimName: nfs-dispatcharr-config
+            claimName: smb-dispatcharr-claim
