--- a/apps/media/dispatcharr/celery.statefulset.yaml
+++ b/apps/media/dispatcharr/celery.statefulset.yaml
@@ -82,4 +82,4 @@ spec:
       volumes:
         - name: data
           persistentVolumeClaim:
-            claimName: nfs-dispatcharr-config
+            claimName: smb-dispatcharr-claim
