--- a/apps/media/dispatcharr/storage.yaml
+++ b/apps/media/dispatcharr/storage.yaml
@@ -1,12 +1,40 @@
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: smb-dispatcharr
+  namespace: media
+spec:
+  storageClassName: ""
+  capacity:
+    storage: 500Mi
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  mountOptions:
+    - dir_mode=0777
+    - file_mode=0777
+    - vers=3.0
+  csi:
+    driver: smb.csi.k8s.io
+    readOnly: false
+    volumeHandle: media-smb-dispatcharr-volume-id
+    volumeAttributes:
+      source: '//192.168.1.253/AppConfig/dispatcharr'
+    nodeStageSecretRef:
+      name: smb-creds-1pw
+      namespace: csi-smb-provisioner
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nfs-dispatcharr-config
+  name: smb-dispatcharr-claim
   namespace: media
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: nfs-csi
   resources:
     requests:
       storage: 500Mi
+  volumeName: smb-dispatcharr
+  storageClassName: ""
